# springcraft

./: .gitignore  LICENSE  README.rst  TODO.md  environment.yml  pyproject.toml  test.py  test_create_data_env.yaml  test_create_data_env.yml
.github/workflows/: deploy.yml  test.yml
doc/: advanced.rst  apidoc.rst  conf.py  index.rst  scraper.py
doc/examples/scripts/: README.txt  basic_nma.py  normal_mode.py
examples/: chimeric_forcefield.py  linear_response.py  lrt_null_model.py  normal_mode.py
src/data/: miyzawa_jernigan_matrix.csv
src/springcraft/: __init__.py  anm.py  forcefield.py  gnm.py  interaction.py  nma.py
src/springcraft/data/: dENM_dehouck_mikhailov_matrix.csv  d_enm.csv  d_enm_edges.csv  distance_bins_dehouck_mikhailov_matrix.csv  keskin.csv  keskin_matrix.csv  miyazawa.csv  miyzawa.csv  sENM_10_dehouck_mikhailov_matrix.csv  s_enm_10.csv  s_enm_13.csv  sdENM_dehouck_mikhailov_matrix.csv  sd_enm.csv
tests/: .Rhistory  test_anm.py  test_forcefield.py  test_gnm.py  test_interaction.py  test_type_specific_ff.py  test_version.py  util.py
tests/data/: 1l2y.cif  1l2y_bio3d_masses.csv  bfacs_eANM_mj_BioPhysConnectoR.csv  bio3d_calpha_ff_dcc_mw_1l2y.csv  bio3d_calpha_ff_fluctuations_non_mw_1l2y.csv  bio3d_calpha_ff_hessian_1l2y.csv  bio3d_mass_1l2y  bio3d_pfanm_ff_dcc_mw_1l2y  bio3d_pfanm_ff_eigenvalues_1l2y  bio3d_pfanm_ff_frequencies_mw_1l2y.csv  bio3d_pfanm_ff_hessian_1l2y.csv  bio3d_sdenm_ff_dcc_subset_mw_1l2y  bio3d_sdenm_ff_dcc_subset_mw_1l2y.csv  bio3d_sdenm_ff_fluctuations_subset_mw_1l2y.csv  bio3d_sdenm_ff_hessian_1l2y.csv  dccm_calpha_bio3d.csv  dccm_calpha_subset_bio3d.csv  dccm_pfenm_bio3d.csv  dccm_pfenm_subset_bio3d.csv  dccm_sdenm_bio3d.csv  dccm_sdenm_subset_bio3d.csv  eANM_biophysconnector.R  eigenval_eANM_BioPhysConnectoR.csv  fluc.csv  hessian_calpha_bio3d.csv  hessian_calpha_sdENM_pfENM_bio3d.R  hessian_eANM_ke_BioPhysConnectoR.csv  hessian_eANM_mj_BioPhysConnectoR.csv  hessian_pfenm_bio3d.csv  hessian_sdenm_bio3d.csv  interaction_biophysconnector.txt  mw_eigenvalues_calpha_bio3d.csv  mw_eigenvalues_pfenm_bio3d.csv  mw_eigenvalues_sdenm_bio3d.csv  mw_fluctuations_calpha_bio3d.csv  mw_fluctuations_calpha_subset_bio3d.csv  mw_fluctuations_pfenm_bio3d.csv  mw_fluctuations_pfenm_subset_bio3d.csv  mw_fluctuations_sdenm_bio3d.csv  mw_fluctuations_sdenm_subset_bio3d.csv  (+15 more)
